# UnpaperAndroid

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/minhdv/androidunpaper2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/unpaper-lib/: unpaper.c  unpaper.h
app/src/main/java/com/minhdv/androidunpaper2/: MainActivity.java  MobileUnpaper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/minhdv/androidunpaper2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
